--- a/sites/all/themes/emor/templates/page.html.twig
+++ b/sites/all/themes/emor/templates/page.html.twig
@@ -55,7 +55,7 @@
     <header id="header" class="header" role="banner" aria-label="{{ 'Site header'|t}}"> 
         {{ page.header }}
     </header>
-
+    	{{ page.content }}
     <footer class="site-footer">
       <div class="container">
 
