--- a/sites/all/themes/emor/css/base/custom.css
+++ b/sites/all/themes/emor/css/base/custom.css
@@ -36,7 +36,7 @@
 #block-headerwelcometext p{
 	font-size: 19px;
 }
-#block-headerwelcometext img{
+#block-headercoverphoto img{
 	width: 100%;
 	height: auto;
 }
