Update article page

--- a/sites/all/themes/emor/css/base/custom.css
+++ b/sites/all/themes/emor/css/base/custom.css
@@ -273,3 +273,26 @@
     overflow: hidden;
 }
 /*END EXPLORE GRID*/
+
+/*EMOR ARTICLE*/
+.emor-article .title-box .index-title{
+	text-transform: uppercase;
+	color: #658cb6;
+	font-weight: bold;
+	font-size: 30px;
+	margin-top: 0;
+}
+.emor-article .title-box .node-title{
+	text-transform: uppercase;
+	color: #797979;
+	font-weight: bold;
+	font-size: 40px;
+}
+.emor-article .title-box .author-name{
+	color: #797979;
+	font-size: 26px;
+}
+.emor-article .title-box .author-name a{
+	color: #797979;
+}
+/*END EMOR ARTICLE*/
