--- a/sites/all/themes/emor/templates/node/node--emor-mapping-article.html.twig
+++ b/sites/all/themes/emor/templates/node/node--emor-mapping-article.html.twig
@@ -128,22 +128,58 @@
       </div>
     </div>
     <div class="col-lg-4 content-tabs">
-      <ul class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" href="#table-of-content">TABLE OF CONTENT</a></li>
-        <li><a data-toggle="tab" href="#emor-notes">EMOR NOTES</a></li>
-      </ul>
+      <div class="content-table">
+        <ul class="nav nav-tabs">
+          <li class="active"><a data-toggle="tab" href="#table-of-content">TABLE OF CONTENT</a></li>
+          <li><a data-toggle="tab" href="#emor-notes">EMOR NOTES</a></li>
+        </ul>
 
-      <div class="tab-content">
-        <div id="table-of-content" class="tab-pane fade in active">
-          <h3>HOME</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div id="emor-notes" class="tab-pane fade">
-          <h3>Menu 1</h3>
-          <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="tab-content">
+          <div id="table-of-content" class="tab-pane fade in active">
+            <h3>HOME</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          <div id="emor-notes" class="tab-pane fade">
+            <h3>Menu 1</h3>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
         </div>
       </div>
+
+      <div class="content-tags">
+        <div class="panel-group">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+                <a class="panel-title" data-toggle="collapse" href="#collapse1">Collapsible panel</a>
+            </div>
+            <div id="collapse1" class="panel-collapse collapse">
+              <div class="panel-body">Tags, Tags, Tags, Tags, Tags, Tags, Tags, Tags,</div>
+              <div class="panel-footer">
+                Article name by author<br>
+                Article name by author<br>
+                Article name by author<br>
+                Article name by author<br>
+                Article name by author<br>                                                            
+              </div>
+            </div>
+          </div>
+        </div>      
+      </div>
+
     </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="path-info clearfix">
+        <div class="col-lg-8 path">
+          MAPPED IN
+        </div>
+        <div class="col-lg-4">
+          PUBLISH
+        </div>
+        
+      </div>
+    </div>    
   </div>
 </div>
 
