--- a/sites/all/themes/emor/templates/node/node--emor-mapping-article.html.twig
+++ b/sites/all/themes/emor/templates/node/node--emor-mapping-article.html.twig
@@ -84,7 +84,7 @@
     </div>
     <div class="col-xs-12">
       <div class="abstract">
-        <p class="text-uppercase"><strong>Abstract</strong></p>
+        <h2 class="text-uppercase"><strong>Abstract</strong></h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic.</p>
       </div>
     </div>
@@ -172,10 +172,20 @@
     <div class="col-lg-12">
       <div class="path-info clearfix">
         <div class="col-lg-8 path">
-          MAPPED IN
+          
+          <h2 class="text-uppercase"><strong>Mapped In</strong></h2>
+          <div class="breadcrumb">
+
+              <span>Halacha &amp; Leadership</span><i class="fa fa-angle-double-right"></i>
+              <span>Halacha</span><i class="fa fa-angle-double-right"></i>
+              <span>Autonomy</span>
+
+          </div> 
+
         </div>
-        <div class="col-lg-4">
-          PUBLISH
+        <div class="col-lg-4 info text-right">
+          <h2 class="text-uppercase"><strong>Published</strong></h2>
+          {% trans %} <i class="fa fa-calendar"></i> {{ date }} {% endtrans %}
         </div>
         
       </div>
