--- a/sites/all/themes/emor/css/components/site-footer.css
+++ b/sites/all/themes/emor/css/components/site-footer.css
@@ -5,7 +5,7 @@
 
 .site-footer {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  padding: 35px 0 30px;
+  /*padding: 35px 0 30px;*/
 }
 .site-footer .layout-container {
   padding: 0 15px;
