--- a/sites/all/themes/emor/templates/views/views-view--emor-mapping-explore--page.html.twig
+++ b/sites/all/themes/emor/templates/views/views-view--emor-mapping-explore--page.html.twig
@@ -38,6 +38,7 @@
     'view-display-id-' ~ display_id,
     dom_id ? 'js-view-dom-id-' ~ dom_id,
     'row',
+    'emor-mapping-explore',
   ]
 %}
 <div{{ attributes.addClass(classes) }}>
