--- a/sites/all/themes/emor/templates/front-page/block--bubblechart.html.twig
+++ b/sites/all/themes/emor/templates/front-page/block--bubblechart.html.twig
@@ -27,7 +27,7 @@
  * @ingroup themeable
  */
 #}
-<div{{ attributes.addClass('col-lg-8 bubble-chart') }}>
+<div{{ attributes.addClass('col-lg-8 bubble-chart mapping-home-item') }}>
   {{ title_prefix }}
   {% if label %}
     <h2{{ title_attributes }}>{{ label }}</h2>
