--- a/sites/all/themes/emor/templates/front-page/block--emormappingguide.html.twig
+++ b/sites/all/themes/emor/templates/front-page/block--emormappingguide.html.twig
@@ -27,7 +27,7 @@
  * @ingroup themeable
  */
 #}
-<div{{ attributes.addClass('text-center col-lg-12 mapping-guide') }}>
+<div{{ attributes.addClass('text-center col-lg-12 mapping-guide mapping-home-item') }}>
   {{ title_prefix }}
   {% if label %}
     <h2{{ title_attributes }}>{{ label }}</h2>
