--- a/sites/all/themes/emor/templates/front-page/block--indextree.html.twig
+++ b/sites/all/themes/emor/templates/front-page/block--indextree.html.twig
@@ -27,7 +27,7 @@
  * @ingroup themeable
  */
 #}
-<div{{ attributes.addClass('col-lg-4 index') }}>
+<div{{ attributes.addClass('col-lg-4 index mapping-home-item') }}>
   {{ title_prefix }}
   {% if label %}
     <h2{{ title_attributes }}>{{ label }}</h2>
@@ -41,9 +41,9 @@
 	        <li class="dropdown">
 	        	<a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="cate-color fa fa-stop" style="color: {{ item.color }}"></span>{{ item.name }} <span class="fa fa-angle-right"></span></a>
 		      	<ul class="dropdown-menu">
-		        	<li><a href="#">Submenu 1-1</a></li>
-		      	  	<li><a href="#">Submenu 1-2</a></li>
-		     	   	<li><a href="#">Submenu 1-3</a></li>                        
+		        	<li><a href="emor-mapping-explore">Submenu 1-1</a></li>
+		      	  	<li><a href="emor-mapping-explore">Submenu 1-2</a></li>
+		     	   	<li><a href="emor-mapping-explore">Submenu 1-3</a></li>                        
 	     	 	</ul>	        	
         	</li>
 	    {% endfor %}	    
