Update JS UI/UX

--- a/sites/all/themes/emor/templates/front-page/block--indexsearch.html.twig
+++ b/sites/all/themes/emor/templates/front-page/block--indexsearch.html.twig
@@ -27,7 +27,7 @@
  * @ingroup themeable
  */
 #}
-<div{{ attributes.addClass('col-lg-4 index-search') }}>
+<div{{ attributes.addClass('col-lg-4 index-search mapping-home-item') }}>
   {{ title_prefix }}
   {% if label %}
     <h2{{ title_attributes }}>{{ label }}</h2>
