--- a/sites/all/themes/emor/templates/front-page/page--front.html.twig
+++ b/sites/all/themes/emor/templates/front-page/page--front.html.twig
@@ -59,6 +59,9 @@
       <div class="container">
         <div class="row">
             {{ page.mapping_home }}
+            <div class="col-lg-2 right-menu">
+              <a href="#">123123123</a>hihi
+            </div>
         </div>
       </div>
     </div>
