--- a/sites/all/themes/emor/templates/front-page/block--knowledgebase.html.twig
+++ b/sites/all/themes/emor/templates/front-page/block--knowledgebase.html.twig
@@ -36,15 +36,53 @@
   {% block content %}
     <h2 class="text-center">Knowledge Base</h2>
     <div class="row">
+      <div class="border-top"></div>
       <div class="list-menu col-lg-6">
         <ul class="nav nav-pills nav-stacked">
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="fa fa-stop"></span>List by Subject
             <span class="pull-right fa fa-angle-down"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Submenu 1-1</a></li>
-              <li><a href="#">Submenu 1-2</a></li>
-              <li><a href="#">Submenu 1-3</a></li> 
+              <li>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">List by Subject 1
+                <span class="pull-right fa fa-angle-down"></span></a>
+                <ul class="dropdown-menu">
+                  <li>Sub 1</li>
+                  <li>Sub 2</li>
+                  <li>Sub 3</li>
+                  <li>Sub 4</li>
+                </ul>
+              </li>
+              <li>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">List by Subject 2
+                <span class="pull-right fa fa-angle-down"></span></a>
+                <ul class="dropdown-menu">
+                  <li>Sub 1</li>
+                  <li>Sub 2</li>
+                  <li>Sub 3</li>
+                  <li>Sub 4</li>
+                </ul>                
+              </li>
+              <li>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">List by Subject 3
+                <span class="pull-right fa fa-angle-down"></span></a>
+                <ul class="dropdown-menu">
+                  <li>Sub 1</li>
+                  <li>Sub 2</li>
+                  <li>Sub 3</li>
+                  <li>Sub 4</li>
+                </ul>                
+              </li>
+              <li>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">List by Subject 4
+                <span class="pull-right fa fa-angle-down"></span></a>
+                <ul class="dropdown-menu">
+                  <li>Sub 1</li>
+                  <li>Sub 2</li>
+                  <li>Sub 3</li>
+                  <li>Sub 4</li>
+                </ul>                
+              </li>                            
             </ul>
           </li>
         </ul>        
