--- a/sites/all/themes/emor/css/colors.css
+++ b/sites/all/themes/emor/css/colors.css
@@ -39,7 +39,7 @@ a:active,
   border-color: #f9f9f9;
 }
 .site-footer {
-  background: #292929;
+  background: #e7ebee;
 }
 .region-header,
 .region-header a,
