--- a/sites/all/themes/emor/templates/front-page/block--bubblechart.html.twig
+++ b/sites/all/themes/emor/templates/front-page/block--bubblechart.html.twig
@@ -34,7 +34,7 @@
   {% endif %}
   {{ title_suffix }}
   {% block content %}
-    <h2 class="text-center">Bubble Chart</h2>
+    <h2 class="text-center">Bubble Chart<i class="fa fa-info info-tooltip"></i></h2>
 	{{ content }}
   {% endblock %}
 </div>
