--- a/sites/all/themes/emor/templates/front-page/block--indexsearch.html.twig
+++ b/sites/all/themes/emor/templates/front-page/block--indexsearch.html.twig
@@ -34,7 +34,7 @@
   {% endif %}
   {{ title_suffix }}
   {% block content %}
-    <h2 class="text-center">Index Search</h2>
+    <h2 class="text-center">Index Search<i class="fa fa-info info-tooltip"></i></h2>
     <form class="clearfix" action="#">
     	<input class="col-xs-10" type="text" placeholder="Search the index">
     	<button class="col-xs-2" type="submit"><i class="fa fa-search"></i></button>
