--- a/sites/all/themes/emor/templates/front-page/block--indextree.html.twig
+++ b/sites/all/themes/emor/templates/front-page/block--indextree.html.twig
@@ -35,7 +35,7 @@
   {{ title_suffix }}
   {% block content %}
     {#{ content }#}
-    <h2 class="text-center">Index</h2>
+    <h2 class="text-center">Index<i class="fa fa-info info-tooltip"></i></h2>
 	  <ul class="nav nav-pills nav-stacked">
 	    {% for key,item in index_tree %}
 	        <li class="dropdown">
