--- a/sites/all/themes/emor/templates/front-page/block--knowledgebase.html.twig
+++ b/sites/all/themes/emor/templates/front-page/block--knowledgebase.html.twig
@@ -34,7 +34,7 @@
   {% endif %}
   {{ title_suffix }}
   {% block content %}
-    <h2 class="text-center">Knowledge Base</h2>
+    <h2 class="text-center">Knowledge Base<i class="fa fa-info info-tooltip"></i></h2>
     <div class="row">
       <div class="border-top"></div>
       <div class="list-menu col-lg-6">
