--- a/sites/all/themes/emor/templates/front-page/page--front.html.twig
+++ b/sites/all/themes/emor/templates/front-page/page--front.html.twig
@@ -60,12 +60,41 @@
         <div class="row">
             {{ page.mapping_home }}
             <div class="col-lg-2 right-menu">
-              <a href="#">123123123</a>hihi
+              <div class="item button-index">
+                <i class="fa fa-bars"></i>
+                <p class="title">Index</p>
+              </div>
+              <div class="item button-bubblechart">
+                <img src="{{theme_path}}/images/bubble-icon.png" alt="">
+                <p class="title">Bubble Chart</p>
+              </div>
+              <div class="item button-index-search">
+                <i class="fa fa-search"></i>
+                <p class="title">Index Search</p>
+              </div>
+              <div class="item button-knowledge-base">
+                <i class="fa fa-search"></i>
+                <p class="title">Knowledge Base</p>
+              </div>                                          
             </div>
         </div>
       </div>
     </div>
     <footer class="site-footer">
+      <div class="blank" style="height: 130px">
+        
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 article-text">
+            <div class="text-box">
+              Article text
+              <br><br><br><br><br>
+            </div>
+          </div>              
+        </div>
+      </div>
+    
     </footer>
   </div>
 </div>
